# drf-iframe-token-example

./: README.md  mypy.ini  pyproject.toml
accounts/: api_urls.py  models.py  urls.py  views.py
accounts/templates/: autologin.html  base.html
authentication/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/src/pages/: _app.tsx
frontend/src/utils/: auth.ts
generated-stubs/allauth/socialaccount/: models.pyi
