[tool.poetry]
name = "drf-spa-in-memory-token"
version = "0.1.0"
description = ""
authors = ["kimuson <dev.kimuson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
Django = "^3.1.7"
djangorestframework = "^3.12.2"
django-allauth = "^0.44.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypyls = {url = "https://github.com/matangover/mypyls/archive/master.zip"}
mypy = "^0.800"
autopep8 = "^1.5.5"
ipython = "^7.21.0"
django-extensions = "^3.1.1"
django-stubs = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
